--- a/WeatherApp/index.html
+++ b/WeatherApp/index.html
@@ -5,6 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
+    <link href='https://fonts.googleapis.com/css?family=Flamenco' rel='stylesheet'>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Poiret+One&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Playwrite+NG+Modern+Guides&family=Poiret+One&display=swap');
+      
+      </style>
   </head>
   <body>
     <div id="root"></div>
