--- a/WeatherApp/index.html
+++ b/WeatherApp/index.html
@@ -5,12 +5,16 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
-    <link href='https://fonts.googleapis.com/css?family=Flamenco' rel='stylesheet'>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Poiret+One&display=swap');
-      @import url('https://fonts.googleapis.com/css2?family=Playwrite+NG+Modern+Guides&family=Poiret+One&display=swap');
-      
-      </style>
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+NG+Modern+Guides&family=Poiret+One&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+NG+Modern+Guides&family=Poiret+One&family=Raleway:ital,wght@0,100..900;1,100..900&family=Tiro+Devanagari+Hindi:ital@0;1&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playwrite+NG+Modern+Guides&family=Poiret+One&family=Raleway:ital,wght@0,100..900;1,100..900&family=Tiro+Devanagari+Hindi:ital@0;1&display=swap');
+
+ @import url("https://use.typekit.net/gof8wwl.css");
+</style>
   </head>
   <body>
     <div id="root"></div>
